<?xml version="1.0"?>
<package>
  <name>mini_servo_model</name>
  <version>1.0.0</version>
  <description>This package contains the URDF of the mini servo robot</description>
  <author email="mdicicco@gmail.com">Matt DiCicco</author>
  <maintainer email="mdicicco@gmail.com">Matt DiCicco</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
